--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,6 +13,7 @@ body {
 </head>
 <body>
 <h1 >Magic!</h1>
+<p>This is my change that I am making right now, you should see it. Wow!</p>
 <p>Code pipelines are magical!</p>
 <img src="ci-cd.png" alt="Dev Ops infinity symbol with stages">
 </body>
